--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-p {
-    background-color: lightblue;
+html {
+    background: aliceblue;
 }
 
 li {
@@ -10,11 +10,33 @@ h3 {
     font-style:italic;
 }
 
-img {
-    opacity: 0.8;
-    border-radius: 50%;
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; 
 }
 
-.avatar {
-    width:200px;
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  color: blue;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.flag-icon {
+    opacity: 0.8;
+    border-radius: 100;
+    padding: 1px;
+    margin: 1px;
+    width: 15px;
+    height: 15px;
 }
