--- a/assignment/styles.css
+++ b/assignment/styles.css
@@ -3,6 +3,7 @@
   border: 2px solid black;
   margin-bottom: 20px;
   background-color: aqua;
+  padding: 10px;
 }
 
 div .Name {
@@ -27,14 +28,20 @@ div .Intro {
 
 h2 {
   margin: 0px;
+  margin-bottom: 5px;
 }
 
 ul {
   margin: 0px;
 }
 
+li {
+  font-size: 20px;
+}
+
 p {
   margin: 0px;
+  font-size: 20px;
 }
 
 img {
