--- a/assignment/styles.css
+++ b/assignment/styles.css
@@ -1,10 +1,33 @@
-.all > div {
+/* .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   width: 800px;
   border: 2px solid black;
   margin-bottom: 20px;
-  background-color: aqua;
   padding: 10px;
   border-radius: 15px;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.Name,
+.URL,
+.hobbies,
+.Location,
+.Intro {
+  width: 800px;
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 15px;
+  text-align: center;
 }
 
 div .Name {
@@ -27,6 +50,10 @@ div .Intro {
   background-color: rgb(238, 249, 163);
 }
 
+h1 {
+  margin-bottom: 0px;
+}
+
 h2 {
   margin: 0px;
   margin-bottom: 5px;
@@ -34,10 +61,6 @@ h2 {
 
 ul {
   margin: 0px;
-}
-
-li {
-  font-size: 20px;
 }
 
 p {
